011 exports datas from DB

--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -1,4 +1,9 @@
 {% extends 'template.html.twig' %}
 {% block title %}{{ parent() }} - Accueil{% endblock %}
 
+{% block titre %}{{ parent() }} - Accueil{% endblock %}
+{% block stitre %}Bienvenue sur notre site d'actualité pour Webdev{% endblock %}
+{% block contenu %}
+
+{% endblock %}
 
