015 - JOIN SQL with twig, controller and entities

--- a/templates/template.html.twig
+++ b/templates/template.html.twig
@@ -44,7 +44,7 @@
                 <div class="col-lg-12 text-center">
                     <h1 class="mt-5">{% block titre %}NosActus.be{% endblock %}</h1>
                     <p class="lead">{% block stitre %}un sous-titre{% endblock %}</p>
-                    <div class="col-sm-9 col-md-offset-2 col-md-5">
+                    <div class="col-sm-9 col-md-offset-2 col-md-12 text-left">
                         {% block contenu %}Le texte de la page{% endblock %}
                     </div>
                 </div>
