--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -23,6 +23,15 @@
 {% endblock %}
 
 {% block contenu %}
-
+    {% for item in articles %}
+        <h2>{{ item.getThetitle }}</h2>
+        <h3>
+            {% for categ in item.getSectionssections %}
+                {{ categ.getThetitled }} |
+            {% endfor %}
+        </h3>
+        <p>{{ item.getThetext|slice(0,350) }} ... </p>
+        <h4>Par {{ item.getUsersusers.getTherealname }} le {{ item.getThedate|date("d/m/Y à H \\h i \\m") }}</h4><hr>
+    {% endfor %}
 {% endblock %}
 
