017 truncate: composer require twig/extensions

--- a/templates/template.html.twig
+++ b/templates/template.html.twig
@@ -56,7 +56,8 @@
     {% endblock %}
 
     {% block footer %}
-        <div><hr><footer class="blockquote-footer">Create by <cite title="Source Title">© Pitz Michaël</cite> - 2018</footer></div>
+        <div><hr><footer class="blockquote-footer">Create by <cite title="Source Title">© Pitz Michaël</cite> - 2018</footer>
+            <p><a href="https://github.com/pierstoval/livingedge" target="_blank">Derniers changement Symfony</a></p></div>
     {% endblock %}
 
 {% endblock %}
