--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -27,7 +27,7 @@
                 {{ categ.getThetitled }} |
             {% endfor %}
         </h3>
-        <p>{{ item.getThetext|slice(0,350) }} ... </p>
+        <p>{{ item.getThetext|truncate(350,true) }}</p>
         <h4>Par {{ item.getUsersusers.getTherealname }} le {{ item.getThedate|date("d/m/Y à H \\h i \\m") }}</h4><hr>
     {% endfor %}
 {% endblock %}
