--- a/templates/public/one_article.html.twig
+++ b/templates/public/one_article.html.twig
@@ -1,12 +1,12 @@
 {% extends 'template.html.twig' %}
-{% block title %}{{ parent() }} - Accueil{% endblock %}
+{% block title %}{{ parent() }} - {{ articles.getThetitle }}{% endblock %}
 
-{% block titre %}{{ parent() }} - Accueil{% endblock %}
-{% block stitre %}Bienvenue sur notre site d'actualité pour Webdev{% endblock %}
+{% block titre %}{{ parent() }} - {{ articles.getThetitle }}{% endblock %}
+{% block stitre %}Détail de notre article {% endblock %}
 
 {% block menu %}
     <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
             <a class="nav-link" href="{{ path("accueil") }}">Accueil
                 <span class="sr-only">(current)</span>
             </a>
@@ -20,15 +20,13 @@
 {% endblock %}
 
 {% block contenu %}
-    {% for item in articles %}
-        <h2>{{ item.getThetitle }}</h2>
+        <h2>{{ articles.getThetitle }}</h2>
         <h3>
-            {% for categ in item.getSectionssections %}
+            {% for categ in articles.getSectionssections %}
                 {{ categ.getThetitled }} |
             {% endfor %}
         </h3>
-        <p>{{ item.getThetext|truncate(350,true) }} <a href="./article/{{ item.getIdarticles }}">Lire la suite</a></p>
-        <h4>Par {{ item.getUsersusers.getTherealname }} le {{ item.getThedate|date("d/m/Y à H \\h i \\m") }}</h4><hr>
-    {% endfor %}
+        <p>{{ articles.getThetext|nl2br }}</p>
+        <h4>Par {{ articles.getUsersusers.getTherealname }} le {{ articles.getThedate|date("d/m/Y à H \\h i \\m") }}</h4><hr>
 {% endblock %}
 
