--- a/templates/public/one_article.html.twig
+++ b/templates/public/one_article.html.twig
@@ -13,7 +13,7 @@
         </li>
         {% for itemMenu in sections %}
         <li class="nav-item">
-            <a class="nav-link" href="./section/{{ itemMenu.getIdsections }}">{{ itemMenu.getThetitled }}</a>
+            <a class="nav-link" href="{{ path("detail_section",{"id":categ.getIdsections}) }}">{{ itemMenu.getThetitled }}</a>
         </li>
         {% endfor %}
     </ul>
