--- a/templates/public/one_section.html.twig
+++ b/templates/public/one_section.html.twig
@@ -27,6 +27,9 @@
 {% endblock %}
 
 {% block contenu %}
+    {% if articles is empty %}
+        <h3><small>Il n'y a pas encore d'article dans cette rubrique</small> <a href="{{ path("accueil") }}">Retour à l'accueil</a></h3><hr>
+    {% endif %}
     {% for item in articles %}
         <h2>{{ item.getThetitle }}</h2>
         <h3>
