31 template the admin

--- a/templates/articles/new.html.twig
+++ b/templates/articles/new.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'template.html.twig' %}
 
 {% block title %}New Articles{% endblock %}
 
-{% block body %}
+{% block contenu %}
     <h1>Create new Articles</h1>
 
     {{ include('articles/_form.html.twig') }}
