--- a/templates/articles/edit.html.twig
+++ b/templates/articles/edit.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'template.html.twig' %}
 
 {% block title %}Edit Articles{% endblock %}
 
-{% block body %}
+{% block contenu %}
     <h1>Edit Articles</h1>
 
     {{ include('articles/_form.html.twig', {'button_label': 'Update'}) }}
