--- a/templates/articles/show.html.twig
+++ b/templates/articles/show.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'template.html.twig' %}
 
 {% block title %}Articles{% endblock %}
 
-{% block body %}
+{% block contenu %}
     <h1>Articles</h1>
 
     <table class="table">
