33 create links to admin

--- a/templates/public/one_section.html.twig
+++ b/templates/public/one_section.html.twig
@@ -23,6 +23,7 @@
             <a class="nav-link" href="{{ path("detail_section",{'id':itemMenu.getIdsections}) }}">{{ itemMenu.getThetitled }}</a>
         </li>
         {% endfor %}
+        <li class="nav-item"> <a class="nav-link" href="{{ path('articles_index')}}">Admin</a></li>
     </ul>
 {% endblock %}
 
