--- a/templates/articles/edit.html.twig
+++ b/templates/articles/edit.html.twig
@@ -1,7 +1,16 @@
 {% extends 'template.html.twig' %}
 
 {% block title %}Edit Articles{% endblock %}
-
+{% block menu %}
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+            <a class="nav-link" href="{{ path("articles_index") }}">Accueil de l'administration
+                <span class="sr-only">(current)</span>
+            </a>
+        </li>
+        <li class="nav-item"> <a class="nav-link" href="{{ path('the_logout')}}">Déconnexion</a></li>
+    </ul>
+{% endblock %}
 {% block contenu %}
     <h1>Edit Articles</h1>
 
