--- a/templates/articles/new.html.twig
+++ b/templates/articles/new.html.twig
@@ -1,11 +1,20 @@
 {% extends 'template.html.twig' %}
 
-{% block title %}New Articles{% endblock %}
-
+{% block title %}Nouvel Article{% endblock %}
+{% block menu %}
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+            <a class="nav-link" href="{{ path("articles_index") }}">Accueil de l'administration
+                <span class="sr-only">(current)</span>
+            </a>
+        </li>
+        <li class="nav-item"> <a class="nav-link" href="{{ path('the_logout')}}">Déconnexion</a></li>
+    </ul>
+{% endblock %}
 {% block contenu %}
-    <h1>Create new Articles</h1>
+    <h1>Créez un nouvel article</h1>
 
     {{ include('articles/_form.html.twig') }}
 
-    <a href="{{ path('articles_index') }}">back to list</a>
+    <a href="{{ path('articles_index') }}">Retour à l'accueil</a>
 {% endblock %}
