36 translate Admin's templates in french

--- a/templates/articles/edit.html.twig
+++ b/templates/articles/edit.html.twig
@@ -1,22 +1,25 @@
 {% extends 'template.html.twig' %}
 
-{% block title %}Edit Articles{% endblock %}
+{% block title %}{{parent()}} - Modifier {{ article.thetitle }}{% endblock %}
 {% block menu %}
     <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-            <a class="nav-link" href="{{ path("articles_index") }}">Accueil de l'administration
-                <span class="sr-only">(current)</span>
-            </a>
+            <a class="nav-link" href="{{ path("articles_index") }}">Accueil de l'administration</a>
         </li>
-        <li class="nav-item"> <a class="nav-link" href="{{ path('the_logout')}}">Déconnexion</a></li>
+        <li class="nav-item active">
+            <a class="nav-link" href="{{ path('articles_new') }}">Créer un nouvel article</a>
+        </li>
+        <li class="nav-item"> 
+            <a class="nav-link" href="{{ path('the_logout')}}">Déconnexion</a>
+        </li>
     </ul>
 {% endblock %}
 {% block contenu %}
-    <h1>Edit Articles</h1>
+    <p class="lead">{% block stitre %}Modifier {{ article.thetitle }}{% endblock %}</p>
 
-    {{ include('articles/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('articles/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('articles_index') }}">back to list</a>
+    <hr> <a href="{{ path('articles_index') }}">Retour à l'accueil</a><hr>
 
     {{ include('articles/_delete_form.html.twig') }}
 {% endblock %}
