--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -1,19 +1,21 @@
 {% extends 'template.html.twig' %}
 
-{% block title %}Articles index{% endblock %}
+{% block title %}{{parent()}} - Liste des articles{% endblock %}
 {% block menu %}
     <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-            <a class="nav-link" href="{{ path("articles_index") }}">Accueil de l'administration
-                <span class="sr-only">(current)</span>
-            </a>
+            <a class="nav-link" href="{{ path("articles_index") }}">Accueil de l'administration</a>
         </li>
-        <li class="nav-item"> <a class="nav-link" href="{{ path('the_logout')}}">Déconnexion</a></li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('articles_new') }}">Créer un nouvel article</a>
+        </li>
+        <li class="nav-item"> 
+            <a class="nav-link" href="{{ path('the_logout')}}">Déconnexion</a>
+        </li>
     </ul>
 {% endblock %}
 {% block contenu %}
-    <h1>Articles index</h1>
-
+    <p class="lead">{% block stitre %}Liste de tous nos articles{% endblock %}</p>
     <table class="table">
         <thead>
             <tr>
@@ -32,17 +34,17 @@
                 <td>{{ article.thetext }}</td>
                 <td>{{ article.thedate ? article.thedate|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('articles_show', {'idarticles': article.idarticles}) }}">show</a>
-                    <a href="{{ path('articles_edit', {'idarticles': article.idarticles}) }}">edit</a>
+                    <a href="{{ path('articles_show', {'idarticles': article.idarticles}) }}">voir</a>
+                    <a href="{{ path('articles_edit', {'idarticles': article.idarticles}) }}">modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="5">pas encore d'article</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('articles_new') }}">Create new</a>
+    <a href="{{ path('articles_new') }}">Créer un nouvel article</a>
 {% endblock %}
