--- a/templates/articles/new.html.twig
+++ b/templates/articles/new.html.twig
@@ -1,20 +1,23 @@
 {% extends 'template.html.twig' %}
 
-{% block title %}Nouvel Article{% endblock %}
+{% block title %}{{parent()}} - Nouvel Article{% endblock %}
 {% block menu %}
     <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="{{ path("articles_index") }}">Accueil de l'administration
-                <span class="sr-only">(current)</span>
-            </a>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path("articles_index") }}">Accueil de l'administration</a>
         </li>
-        <li class="nav-item"> <a class="nav-link" href="{{ path('the_logout')}}">Déconnexion</a></li>
+        <li class="nav-item active">
+            <a class="nav-link" href="{{ path('articles_new') }}">Créer un nouvel article</a>
+        </li>
+        <li class="nav-item"> 
+            <a class="nav-link" href="{{ path('the_logout')}}">Déconnexion</a>
+        </li>
     </ul>
 {% endblock %}
 {% block contenu %}
-    <h1>Créez un nouvel article</h1>
+    <p class="lead">{% block stitre %}Créez un nouvel article{% endblock %}</p>
 
     {{ include('articles/_form.html.twig') }}
 
-    <a href="{{ path('articles_index') }}">Retour à l'accueil</a>
+    <hr> <a href="{{ path('articles_index') }}">Retour à l'accueil</a>
 {% endblock %}
