--- a/templates/articles/show.html.twig
+++ b/templates/articles/show.html.twig
@@ -1,18 +1,21 @@
 {% extends 'template.html.twig' %}
 
-{% block title %}Articles{% endblock %}
+{% block title %}{{parent()}} - {{ article.thetitle }}{% endblock %}
 {% block menu %}
     <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="{{ path("articles_index") }}">Accueil de l'administration
-                <span class="sr-only">(current)</span>
-            </a>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path("articles_index") }}">Accueil de l'administration</a>
         </li>
-        <li class="nav-item"> <a class="nav-link" href="{{ path('the_logout')}}">Déconnexion</a></li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('articles_new') }}">Créer un nouvel article</a>
+        </li>
+        <li class="nav-item"> 
+            <a class="nav-link" href="{{ path('the_logout')}}">Déconnexion</a>
+        </li>
     </ul>
 {% endblock %}
 {% block contenu %}
-    <h1>Articles</h1>
+    <p class="lead">{% block stitre %}{{ article.thetitle }}{% endblock %}</p>
 
     <table class="table">
         <tbody>
@@ -35,9 +38,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('articles_index') }}">back to list</a>
+                <a href="{{ path('articles_index') }}">Retour à l'accueil</a><hr>
 
-    <a href="{{ path('articles_edit', {'idarticles': article.idarticles}) }}">edit</a>
+                <a href="{{ path('articles_edit', {'idarticles': article.idarticles}) }}">Modifier</a><hr>
 
     {{ include('articles/_delete_form.html.twig') }}
 {% endblock %}
